--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
 <h1>Premier League 2018/2019</h1>
-<app-league-table></app-league-table>
-<app-results></app-results>
+<div class="container-fluid">
+  <nav class="navbar">
+    <ul class="navbar nav">
+      <li class="navbar-item" routerLinkActive="active"><a routerLink="/">League Table</a></li>
+      <li class="navbar-item" routerLinkActive="active"><a routerLink="/results">Results</a></li>
+    </ul>
+  </nav>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <router-outlet></router-outlet>
+  </div>
+</div>
