--- a/src/app/league-table/league-table.component.html
+++ b/src/app/league-table/league-table.component.html
@@ -1,11 +1,11 @@
-<table>
+<table class="table">
   <thead>
   <tr>
-    <th>Rank</th><th>Club</th><th>Played Games</th><th>Won</th><th>Drawn</th><th>Lost</th>
-    <th>GF</th><th>GA</th><th>GD</th><th>Points</th>
+    <th scope="col">Rank</th><th scope="col">Club</th><th scope="col">Played Games</th><th scope="col">Won</th><th scope="col">Drawn</th><th scope="col">Lost</th>
+    <th scope="col">GF</th><th scope="col">GA</th><th scope="col">GD</th><th scope="col">Points</th>
   </tr>
   </thead>
-  <tr *ngFor="let l of tableData">
+  <tr *ngFor="let l of tableData" scope="row">
     <td>{{l.position}}</td>
     <td><img src={{l.team.crestUrl}} alt="logo" width="30px" height="30px"> {{l.team.name}}</td>
     <td>{{l.playedGames}}</td>
