--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,15 @@
-<h1>Premier League 2018/2019</h1>
 <div class="container-fluid">
-  <nav class="navbar">
-    <ul class="navbar nav">
-      <li class="navbar-item" routerLinkActive="active"><a routerLink="/">League Table</a></li>
-      <li class="navbar-item" routerLinkActive="active"><a routerLink="/results">Results</a></li>
+  <nav class="navbar navbar-dark bg-dark navbar-expand">
+    <a href="#" class="navbar-brand">Premier League</a>
+    <ul class="navbar-nav">
+      <li class="nav-item active" routerLinkActive="active"><a routerLink="/" class="nav-link">League Table</a></li>
+      <li class="nav-item" routerLinkActive="active"><a routerLink="/results" class="nav-link">Results</a></li>
     </ul>
   </nav>
-</div>
+
 <div class="row">
   <div class="col-xs-12">
     <router-outlet></router-outlet>
   </div>
+</div>
 </div>
