--- a/src/app/league-table/league-table.component.html
+++ b/src/app/league-table/league-table.component.html
@@ -1,4 +1,4 @@
-<table class="table">
+<table class="table table-hover">
   <thead>
   <tr>
     <th scope="col">Rank</th><th scope="col">Club</th><th scope="col">Played Games</th><th scope="col">Won</th><th scope="col">Drawn</th><th scope="col">Lost</th>
