--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -1,15 +1,17 @@
-<table >
+<table class="table table-hover">
   <thead>
-  <td>Date</td>
-  <td>Home Team</td>
-  <td>Goals</td>
-  <td>Away Team</td>
+  <tr>
+  <th scope="col">Date</th>
+  <th scope="col">Home Team</th>
+  <th scope="col">Goals</th>
+  <th scope="col">Away Team</th>
+  </tr>
   </thead>
-  <tbody>
-  <tr *ngFor = "let m of matches" >
-    <td>{{m.utcDate}}</td>
+  <tbody *ngFor = "let m of matches" >
+  <tr *ngIf="m.status === 'FINISHED'" scope="row" >
+    <td >{{m.utcDate | date:"dd/MM/yyyy"}}</td>
     <td>{{m.homeTeam.name}}</td>
-    <td>{{m.score.fullTime.homeTeam}}{{m.score.fullTime.awayTeam}}</td>
+    <td>{{m.score.fullTime.homeTeam}}<span><></span>{{m.score.fullTime.awayTeam}}</td>
     <td>{{m.awayTeam.name}}</td>
   </tr>
   </tbody>
