--- a/src/app/league-table/league-table.component.html
+++ b/src/app/league-table/league-table.component.html
@@ -1,3 +1,4 @@
+<div class="container-fluid" >
 <table class="table table-hover">
   <thead>
   <tr>
@@ -18,3 +19,4 @@
     <td>{{l.points}}</td>
   </tr>
 </table>
+</div>
