Fixtures component added and team component stylys changed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <a href="#" class="navbar-brand">Premier League</a>
     <ul class="navbar-nav">
       <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/" class="nav-link">League Table</a></li>
+      <li class="nav-item" routerLinkActive="active"><a routerLink="/fixtures" class="nav-link">Fixtures</a></li>
       <li class="nav-item" routerLinkActive="active"><a routerLink="/results" class="nav-link">Results</a></li>
       <li class="nav-item" routerLinkActive="active"><a routerLink="/teams" class="nav-link">Teams</a></li>
     </ul>
