--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,16 +2,20 @@
   <nav class="navbar navbar-dark bg-dark navbar-expand">
     <a href="#" class="navbar-brand">Premier League</a>
     <ul class="navbar-nav">
-      <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/" class="nav-link">League Table</a></li>
+      <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+        <a routerLink="/" class="nav-link">League Table</a>
+      </li>
       <li class="nav-item" routerLinkActive="active"><a routerLink="/fixtures" class="nav-link">Fixtures</a></li>
       <li class="nav-item" routerLinkActive="active"><a routerLink="/results" class="nav-link">Results</a></li>
-      <li class="nav-item" routerLinkActive="active"><a routerLink="/teams" class="nav-link">Teams</a></li>
+      <li class="nav-item" routerLinkActive="active">
+        <a routerLink="/teams" class="nav-link">Teams</a>
+      </li>
     </ul>
   </nav>
 
-<div class="row">
-  <div class="col-xs-12">
-    <router-outlet></router-outlet>
+  <div class="row">
+    <div class="col-xs-12">
+      <router-outlet></router-outlet>
+    </div>
   </div>
-</div>
 </div>
