responsive navbar with ng bootstrap

--- a/src/app/league-table/league-table.component.html
+++ b/src/app/league-table/league-table.component.html
@@ -1,35 +1,39 @@
-<div class="container-fluid">
   <div class="row">
-    <div class="col-md-12">
-      <table class="table table-hover" style="max-width: 100%;">
-        <thead>
-        <tr>
-          <th scope="col">Rank</th>
-          <th scope="col">Club</th>
-          <th scope="col">Played Games</th>
-          <th scope="col">Won</th>
-          <th scope="col">Drawn</th>
-          <th scope="col">Lost</th>
-          <th scope="col">GF</th>
-          <th scope="col">GA</th>
-          <th scope="col">GD</th>
-          <th scope="col">Points</th>
-        </tr>
-        </thead>
-        <tr *ngFor="let l of tableData">
-          <td>{{l.position}}</td>
-          <td><img src={{l.team.crestUrl}} alt="logo" width="30px" height="30px"> {{l.team.name}}</td>
-          <td>{{l.playedGames}}</td>
-          <td>{{l.won}}</td>
-          <td>{{l.draw}}</td>
-          <td>{{l.lost}}</td>
-          <td>{{l.goalsFor}}</td>
-          <td>{{l.goalsAgainst}}</td>
-          <td>{{l.goalDifference}}</td>
-          <td>{{l.points}}</td>
-        </tr>
-      </table>
+    <div class="col-12">
+      <div class="table-responsive">
+        <table class="table table-hover">
+          <thead>
+          <tr>
+            <th>Rank</th>
+            <th>Club</th>
+            <th>Played Games</th>
+            <th>Won</th>
+            <th>Drawn</th>
+            <th>Lost</th>
+            <th>GF</th>
+            <th>GA</th>
+            <th>GD</th>
+            <th>Points</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr  *ngFor="let l of tableData">
+            <td>{{l.position}}</td>
+            <td><img src={{l.team.crestUrl}} alt="logo" width="30px" height="30px"> {{l.team.name}}</td>
+            <td>{{l.playedGames}}</td>
+            <td>{{l.won}}</td>
+            <td>{{l.draw}}</td>
+            <td>{{l.lost}}</td>
+            <td>{{l.goalsFor}}</td>
+            <td>{{l.goalsAgainst}}</td>
+            <td>{{l.goalDifference}}</td>
+            <td>{{l.points}}</td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
-</div>
+
+
 
