--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid" style="padding: 0;">
-  <nav class="navbar navbar-dark bg-dark navbar-expand">
-    <a href="#" class="navbar-brand">Premier League</a>
+  <!--<nav class="navbar navbar-dark bg-dark navbar-expand">
+    <a class="navbar-brand">Premier League</a>
     <ul class="navbar-nav">
       <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
         <a routerLink="/" class="nav-link">League Table</a>
@@ -11,11 +11,31 @@
         <a routerLink="/teams" class="nav-link">Teams</a>
       </li>
     </ul>
+  </nav>-->
+  <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+
+
+    <a routerLink="/" class="navbar-brand">Premier League</a>
+      <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#myNavbar"
+              (click)="isCollapsed = !isCollapsed">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+    <div class="collapse navbar-collapse" id="myNavbar" [ngbCollapse]="isCollapsed">
+      <ul class="navbar-nav">
+        <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+          <a routerLink="/" class="nav-link">League Table</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active"><a routerLink="/fixtures" class="nav-link">Fixtures</a></li>
+        <li class="nav-item" routerLinkActive="active"><a routerLink="/results" class="nav-link">Results</a></li>
+        <li class="nav-item" routerLinkActive="active">
+          <a routerLink="/teams" class="nav-link">Teams</a>
+        </li>
+      </ul>
+    </div>
   </nav>
 
-  <div class="row">
-    <div class="col-xs-12">
-      <router-outlet></router-outlet>
-    </div>
-  </div>
+
+  <router-outlet></router-outlet>
+
 </div>
