--- a/src/app/fixtures/fixtures.component.html
+++ b/src/app/fixtures/fixtures.component.html
@@ -1,18 +1,20 @@
-<div class="container-fluid" >
-  <table class="table table-hover">
-    <thead>
-    <tr>
-      <th scope="col">Date</th>
-      <th scope="col">Home Team</th>
-      <th scope="col">Away Team</th>
-    </tr>
-    </thead>
-    <tbody *ngFor = "let m of matches" >
-    <tr *ngIf="m.status === 'SCHEDULED'">
-      <td >{{m.utcDate | date:"dd/MM/yyyy"}}</td>
-      <td>{{m.homeTeam.name}}</td>
-      <td>{{m.awayTeam.name}}</td>
-    </tr>
-    </tbody>
-  </table>
+<div class="container-fluid">
+  <div class="table-responsive">
+    <table class="table table-hover">
+      <thead>
+      <tr>
+        <th>Date</th>
+        <th>Home Team</th>
+        <th>Away Team</th>
+      </tr>
+      </thead>
+      <tbody *ngFor="let m of matches">
+      <tr *ngIf="m.status === 'SCHEDULED'">
+        <td>{{m.utcDate | date:"dd/MM/yyyy"}}</td>
+        <td>{{m.homeTeam.name}}</td>
+        <td>{{m.awayTeam.name}}</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
