--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,41 +1,22 @@
 <div class="container-fluid" style="padding: 0;">
-  <!--<nav class="navbar navbar-dark bg-dark navbar-expand">
-    <a class="navbar-brand">Premier League</a>
-    <ul class="navbar-nav">
-      <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-        <a routerLink="/" class="nav-link">League Table</a>
-      </li>
-      <li class="nav-item" routerLinkActive="active"><a routerLink="/fixtures" class="nav-link">Fixtures</a></li>
-      <li class="nav-item" routerLinkActive="active"><a routerLink="/results" class="nav-link">Results</a></li>
-      <li class="nav-item" routerLinkActive="active">
-        <a routerLink="/teams" class="nav-link">Teams</a>
-      </li>
-    </ul>
-  </nav>-->
-  <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-
-
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <a routerLink="/" class="navbar-brand">Premier League</a>
-      <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#myNavbar"
-              (click)="isCollapsed = !isCollapsed">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
+    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#myNavbar"
+            (click)="isCollapsed = !isCollapsed">
+      <span class="navbar-toggler-icon"></span>
+    </button>
     <div class="collapse navbar-collapse" id="myNavbar" [ngbCollapse]="isCollapsed">
       <ul class="navbar-nav">
-        <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+        <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" (click)="isCollapsed = !isCollapsed">
           <a routerLink="/" class="nav-link">League Table</a>
         </li>
-        <li class="nav-item" routerLinkActive="active"><a routerLink="/fixtures" class="nav-link">Fixtures</a></li>
-        <li class="nav-item" routerLinkActive="active"><a routerLink="/results" class="nav-link">Results</a></li>
-        <li class="nav-item" routerLinkActive="active">
+        <li class="nav-item" routerLinkActive="active" (click)="isCollapsed = !isCollapsed"><a routerLink="/fixtures" class="nav-link">Fixtures</a></li>
+        <li class="nav-item" routerLinkActive="active" (click)="isCollapsed = !isCollapsed"><a routerLink="/results" class="nav-link">Results</a></li>
+        <li class="nav-item" routerLinkActive="active" (click)="isCollapsed = !isCollapsed">
           <a routerLink="/teams" class="nav-link">Teams</a>
         </li>
       </ul>
     </div>
   </nav>
-
-
   <router-outlet></router-outlet>
-
 </div>
