--- a/src/app/teams/team-detail/team-detail.component.html
+++ b/src/app/teams/team-detail/team-detail.component.html
@@ -4,7 +4,7 @@
 
 </div>
 <div *ngIf="matches">
-<table class="table table-hover">
+<table class="table table-hover" style="text-align:center;">
   <thead>
   <tr>
     <th scope="col">Date</th>
