--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="myNavbar" [ngbCollapse]="isCollapsed">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" (click)="isCollapsed = !isCollapsed">
           <a routerLink="/" class="nav-link">League Table</a>
         </li>
@@ -18,5 +18,9 @@
       </ul>
     </div>
   </nav>
-  <router-outlet></router-outlet>
+  <div class="row">
+    <div class="col-12">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
 </div>
