--- a/src/app/fixtures/fixtures.component.html
+++ b/src/app/fixtures/fixtures.component.html
@@ -1,6 +1,6 @@
 
   <div class="table-responsive">
-    <table class="table table-hover">
+    <table class="table table-hover" style="text-align:center;">
       <thead>
       <tr>
         <th>Date</th>
