--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -1,20 +1,67 @@
 <div class="table-responsive">
-<table class="table table-hover">
-  <thead>
-  <tr>
-  <th scope="col">Date</th>
-  <th scope="col">Home Team</th>
-  <th scope="col">Goals</th>
-  <th scope="col">Away Team</th>
-  </tr>
-  </thead>
-  <tbody *ngFor = "let m of matches" >
-  <tr *ngIf="m.status === 'FINISHED'" scope="row" >
-    <td >{{m.utcDate | date:"dd/MM/yyyy"}}</td>
-    <td>{{m.homeTeam.name}}</td>
-    <td>{{m.score.fullTime.homeTeam}}<span><></span>{{m.score.fullTime.awayTeam}}</td>
-    <td>{{m.awayTeam.name}}</td>
-  </tr>
-  </tbody>
-</table>
+  <table class="table table-hover" style="text-align:center;">
+    <thead>
+    <tr>
+      <th>Date</th>
+      <th>Home Team</th>
+      <th>Goals</th>
+      <th>Away Team</th>
+    </tr>
+    </thead>
+    <tbody *ngFor="let m of matches">
+    <tr *ngIf="m.status === 'FINISHED'">
+      <td>{{m.utcDate | date:"dd/MM/yyyy"}}</td>
+      <td>{{m.homeTeam.name}}</td>
+      <td>
+        <div class="row" style="background-color: darkmagenta; color: white">
+          <div class="col-sm-6 text-left">
+            {{m.score.fullTime.homeTeam}}
+          </div>
+          <div class="col-sm-6 text-right">
+            {{m.score.fullTime.awayTeam}}
+          </div>
+        </div>
+      </td>
+      <!--<td>{{m.score.fullTime.homeTeam}}<span><></span>{{m.score.fullTime.awayTeam}}</td>-->
+      <td>{{m.awayTeam.name}}</td>
+    </tr>
+    </tbody>
+  </table>
 </div>
+<!--
+
+<div class="row" *ngFor="let m of matches,let i = index">
+  <div *ngIf="m.status === 'FINISHED'">
+    <div class="col-md-12" *ngIf="m.utcDate.substring(0,10)[i] === m.utcDate.substring(0,10)[i+1] ; else infoText">
+      <div class="row">
+        <div class="col-md-12">
+          {{m.utcDate | date: "dd/MMM/yyyy" [i]}}
+          <div class="row">
+            <div class="col-md-12">
+              <td>{{m.homeTeam.name}}</td>
+              <td>{{m.score.fullTime.homeTeam}}<span><></span>{{m.score.fullTime.awayTeam}}</td>
+              <td>{{m.awayTeam.name}}</td>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <ng-template #infoText>
+      <div class="row">
+        <div class="col-md-12">
+          {{m.utcDate | date: "dd/MMM/yyyy" [i]}}
+          <div class="row">
+            <div class="col-md-12">
+              <td>{{m.homeTeam.name}}</td>
+              <td>{{m.score.fullTime.homeTeam}}<span><></span>{{m.score.fullTime.awayTeam}}</td>
+              <td>{{m.awayTeam.name}}</td>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </ng-template>
+  </div>
+</div>
+-->
