--- a/src/app/teams/teams.component.html
+++ b/src/app/teams/teams.component.html
@@ -1,12 +1,11 @@
-
-<div class="row justify-content-center" >
+<div class="row justify-content-center">
   <div class="col-xs-12" *ngFor="let team of teams">
     <div class="card border-dark " style="width: 300px; height: 450px; margin: 10px;" (click)="onSelectTeam(team)" >
       <img class="card-img-top embed-responsive" src="{{team.crestUrl}}" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">{{team.name}}</h5>
         <p class="card-text">{{team.address}}</p>
-        <a href="{{team.website}}" class="btn btn-primary" target="_blank">Visit Website</a>
+        <a href="{{team.website}}" class="btn btn-outline-dark btn-lg btn-block" target="_blank">Visit Website</a>
       </div>
     </div>
   </div>
