--- a/src/app/league-table/league-table.component.html
+++ b/src/app/league-table/league-table.component.html
@@ -1,4 +1,15 @@
-      <div class="table-responsive hide-lg">
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-12">
+      <app-league-table-list></app-league-table-list>
+    </div>
+  </div>
+</div>
+
+
+
+<!-- Older Approach -->
+<!--      <div class="table-responsive hide-lg">
         <table class="table table-hover" style="text-align:center;">
           <thead>
           <tr>
@@ -70,3 +81,4 @@
 
 
 
+-->
