--- a/src/app/fixtures/fixtures.component.html
+++ b/src/app/fixtures/fixtures.component.html
@@ -1,19 +1,2 @@
+<app-fixture-list></app-fixture-list>
 
-  <div class="table-responsive">
-    <table class="table table-hover" style="text-align:center;">
-      <thead>
-      <tr>
-        <th>Date</th>
-        <th>Home Team</th>
-        <th>Away Team</th>
-      </tr>
-      </thead>
-      <tbody *ngFor="let m of matches">
-      <tr *ngIf="m.status === 'SCHEDULED'">
-        <td>{{m.utcDate | date:"dd/MM/yyyy"}}</td>
-        <td>{{m.homeTeam.name}}</td>
-        <td>{{m.awayTeam.name}}</td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
